--- a/src/main/resources/cassandra.yaml
+++ b/src/main/resources/cassandra.yaml
@@ -46,6 +46,10 @@ hinted_handoff_throttle_in_kb: 1024
 # cross-dc handoff tends to be slower
 max_hints_delivery_threads: 2
 
+# Maximum throttle in KBs per second, total. This will be
+# reduced proportionally to the number of nodes in the cluster.
+# batchlog_replay_throttle_in_kb: 1024
+
 # The following setting populates the page cache on memtable flush and compaction
 # WARNING: Enable this setting only when the whole node's data fits in memory.
 # Defaults to: false
@@ -103,10 +107,10 @@ partitioner: org.apache.cassandra.dht.Murmur3Partitioner
 # will spread data evenly across them, subject to the granularity of
 # the configured compaction strategy.
 data_file_directories:
-    - /Users/patrickcallaghan/Tools/DataStax/dsc-cassandra-2.0.4/data/cassandra/data
+    - /Users/patrickcallaghan/Tools/dsc-cassandra-2.0.5/data
 
 # commit log
-commitlog_directory: /Users/patrickcallaghan/Tools/DataStax/dsc-cassandra-2.0.4/data/cassandra/commitlog
+commitlog_directory: /Users/patrickcallaghan/Tools/dsc-cassandra-2.0.5/data/commitlog
 
 # policy for data disk failures:
 # stop: shut down gossip and Thrift, leaving the node effectively dead, but
@@ -181,7 +185,7 @@ row_cache_save_period: 0
 # memory_allocator: NativeAllocator
 
 # saved caches
-saved_caches_directory: /Users/patrickcallaghan/Tools/DataStax/dsc-cassandra-2.0.4/data/cassandra/saved_caches
+saved_caches_directory: /Users/patrickcallaghan/Tools/dsc-cassandra-2.0.5/data/saved_caches
 
 # commitlog_sync may be either "periodic" or "batch." 
 # When in batch mode, Cassandra won't ack writes until the commit log
@@ -244,7 +248,7 @@ concurrent_writes: 32
 
 # Total memory to use for memtables.  Cassandra will flush the largest
 # memtable when this much memory is used.
-# If omitted, Cassandra will set it to 1/3 of the heap.
+# If omitted, Cassandra will set it to 1/4 of the heap.
 # memtable_total_space_in_mb: 2048
 
 # Total space to use for commitlogs.  Since commitlog segments are
